--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -12,6 +12,7 @@
         tools:layout="@layout/main_menu">
 
         <action android:id="@+id/action_MainMenu_to_IngredientList" app:destination="@id/IngredientList" />
+        <action android:id="@+id/action_MainMenu_to_RecipeList" app:destination="@id/RecipeList" />
     </fragment>
     <fragment
         android:id="@+id/IngredientList"
@@ -20,5 +21,24 @@
         tools:layout="@layout/ingredient_list">
 
         <action android:id="@+id/action_IngredientList_to_MainMenu" app:destination="@id/MainMenu" />
+    </fragment>
+    <fragment
+        android:id="@+id/RecipeList"
+        android:name="com.triad.school.letscook.fragments.RecipeListFragment"
+        android:label="@string/recipe_list_label"
+        tools:layout="@layout/recipe_list">
+
+        <action android:id="@+id/action_RecipeList_to_MainMenu" app:destination="@id/MainMenu" />
+        <action android:id="@+id/action_RecipeList_to_EditRecipe" app:destination="@id/EditRecipe" />
+    </fragment>
+    <fragment
+        android:id="@+id/EditRecipe"
+        android:name="com.triad.school.letscook.fragments.EditRecipeFragment"
+        android:label="@string/edit_recipe_label"
+        tools:layout="@layout/edit_recipe">
+
+        <argument android:name="recipe_id" app:argType="long" />
+
+        <action android:id="@+id/action_EditRecipe_to_RecipeList" app:destination="@id/RecipeList" />
     </fragment>
 </navigation>
