--- a/app/src/main/res/layout/ingredient_with_amount_item.xml
+++ b/app/src/main/res/layout/ingredient_with_amount_item.xml
@@ -1,47 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingBottom="8dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     android:paddingTop="8dp">
 
     <ImageView
         android:id="@+id/IngredientItemIconImageView"
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:layout_marginStart="8dp"
         android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/groceries" />
 
-    <LinearLayout
-        android:layout_width="0dp"
+
+    <TextView
+        android:id="@+id/IngredientItemNameTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        app:layout_constraintStart_toEndOf="@+id/IngredientItemIconImageView"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Apple" />
 
-        <TextView
-            android:id="@+id/IngredientItemNameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Apple" />
+    <TextView
+        android:id="@+id/IngredientItemUnitTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/IngredientItemIconImageView"
+        app:layout_constraintTop_toBottomOf="@+id/IngredientItemNameTextView"
+        tools:text="Piece" />
 
-        <TextView
-            android:id="@+id/IngredientItemUnitTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Piece" />
-
-        <TextView
-            android:id="@+id/IngredientItemAmountTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Fruit" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/IngredientItemAmountTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/IngredientItemIconImageView"
+        app:layout_constraintTop_toBottomOf="@+id/IngredientItemUnitTextView"
+        tools:text="Fruit" />
 
     <ImageButton
         android:id="@+id/IngredientItemRemoveButton"
@@ -49,8 +52,11 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center_vertical"
+        android:contentDescription="@string/remove_recipe_button"
         android:scaleType="fitXY"
         android:src="@drawable/ic_delete_grey600_48dp"
-        android:contentDescription="@string/remove_icon" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
