Added aggregated ingredient list.

--- a/app/src/main/res/layout/create_menu.xml
+++ b/app/src/main/res/layout/create_menu.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:autoSizeTextType="none"
         android:text="@string/to_start"
-        android:textSize="26dp"
+        android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="@+id/recipeWithAmountListRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:text="Button"
+        android:text="@string/lol"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
